policies/standard/general_resources_request_memory/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sgeneralresourcesrequestmemorypolicy
  annotations:
    description: >-
      Memory request enabled
spec:
  crd:
    spec:
      names:
        kind: K8sGeneralResourcesRequestMemoryPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sgeneralresourcesrequestmemorypolicy

        violation[{"msg": msg}] {
          c := input_containers[_]
          not input_request_memory(c)
          msg := sprintf("Memory request must be enabled: %v", [c.name])
        }

        input_request_memory(c){
          c.resources.requests.memory
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }
